index.css
.title {
  color: steelblue;
  font-family: Georgia;
  font-size: 40px;
  text-align: center;
}

.imageGrid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
  place-items: center;
  margin: 5% 20%;
}
.imageGrid img {
height: 100%;
}

